@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-29T08:27:42Z",
+  "timestamp" : "2022-05-29T16:31:38Z",
   "count_outdated" : 488,
   "uniques_outdated" : 273,
-  "count" : 504,
+  "count" : 505,
   "uniques" : 285,
   "clones" : [
     {
@@ -56,8 +56,8 @@
     },
     {
       "timestamp": "2022-05-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
