@@ -1,3 +1,10 @@
+2022-05-29T16:31:38Z:
+* notice: last 14d: unq all: 5 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 273 488 / 285 504
+* notice: next accum: outdated-unq outdated-all / unq all: 273 488 / 285 505
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: changed dates: [2022-05-29]
+
 2022-05-29T08:27:42Z:
 * notice: last 14d: unq all: 5 16
 * notice: prev accum: outdated-unq outdated-all / unq all: 273 488 / 284 504
